# forex-for-soul

./: .env.example  .gitignore  .vercelignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  mock-usdc-mint.json  package-lock.json  package.json  tsconfig.json
app/: next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
app/app/: WalletButton.tsx  WalletPill.tsx  globals.css  idl.json  layout.tsx  page.tsx
app/app/lib/: autoExecutor.ts  constants.ts  marketHours.ts  orders.ts  points.ts  positions.ts  pyth.ts  txErrors.ts  usdc.ts  useProgram.ts
app/app/points/: page.tsx
app/app/pool/: page.tsx
app/components/: Boundary.tsx  ChartDesk.tsx  FlipNumber.tsx  LeverageDial.tsx  MarketClock.tsx  OrdersDialog.tsx  PairRail.tsx  PositionsPanel.tsx  TickerTape.tsx  TradeDesk.tsx
crank/: .env.example  config.py  funding_crank.py  index.ts  liquidation_bot.py  main.py  package-lock.json  package.json  price_crank.py  railway.json  requirements.txt  tsconfig.json
docs/: MARGIN_RULES.md  RISK_DISCLAIMER.md  SUPPORTED_PAIRS.md
programs/forexforsoul/: Cargo.toml
programs/forexforsoul/src/: constants.rs  errors.rs  lib.rs
programs/forexforsoul/src/instructions/: add_trading_pair.rs  close_position.rs  deposit_liquidity.rs  initialize_exchange.rs  liquidate_position.rs  mod.rs  open_position.rs  update_price.rs  withdraw_liquidity.rs
programs/forexforsoul/src/state/: exchange.rs  mod.rs  pair.rs  pool.rs  position.rs
scripts/: init-devnet.ts  init-v2.ts  push-prices.ts
tests/: forexforsoul.ts
(+2 files in other folders)
