[package]
name = "forexforsoul"
version = "0.1.0"
description = "Decentralized Forex perpetuals on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forexforsoul"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["init-if-needed"]
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "1.0.0"
anchor-spl = "1.0.0"
